--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #151b29;
 }
