css hover button update 4

--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@ button {
   padding: 1em 2em;
   font-size: 1em;
 }
+button:hover {
+  border-color: #f1ff5c;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 0.5em 0.5em -0.4em #f1ff5c;
+  transition: 0.3s ease-in;
+}
