--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ button {
   color: #ffa260;
   padding: 1em 2em;
   font-size: 1em;
+  transition: 0.25s;
 }
 button:hover {
   border-color: #f1ff5c;
   color: white;
   cursor: pointer;
   box-shadow: 0 0.5em 0.5em -0.4em #f1ff5c;
-  transition: 0.3s ease-in;
+  transform: translateY(-0.25em);
 }
